# PINAGMM

./: LICENSE  README.md  pyproject.toml
example/: example.py  example_advanced_plots.py
pinagmm/: __init__.py
pinagmm/model/: ensemble_pinam.joblib  newensemble_pinam.joblib  preprocessor_x.joblib  scaler_y.joblib
pinagmm/utils/: pinam.py  predictor.py  setup_variables.py
