[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinagmm"
version = "0.1.0"
authors = [{name = "Sajad Hussaini", email = "hussaini.smsajad@gmail.com"}]
description = "A Physics-Informed Neural Additive Ground Motion Model for Hazard-Compatible Three-Component Stochastic Simulation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ground motion models", "stochastic simulation", "conditional simulation", "neural networks", "seismology", "mixed-effects"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn==1.8.0",
    "torch",
    "mmer==1.4.0",
    "sgsim==1.4.0",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Sajad-Hussaini/PINAGMM"
Repository = "https://github.com/Sajad-Hussaini/PINAGMM"
Issues = "https://github.com/Sajad-Hussaini/PINAGMM/issues"

[tool.setuptools]
packages = ["pinagmm", "pinagmm.utils", "pinagmm.model"]

[tool.setuptools.package-data]
"pinagmm.model" = ["*.joblib"]